# fit-v0

./: .env.test  README.md  pyproject.toml
docs/: Domínio de Identidade e Acesso.md  documentacaoInicial.md
docs/excalidraw/: teste.excalidraw
docs/mermaid/: Contexto Nutricao.mermaid  Contexto de Avaliação e Acompanhamento.mermaid  Contexto de Treinamento.mermaid  Diagrama de Contextos da Plataforma IARA.mermaid  Diagramas de Entidades e Agregados por Contexto.mermaid  arquitetura.mermaid  classes.mermaid  projeto.mermaid
src/: main.py
src/api/: dependencies.py
src/api/routes/: auth.py  profiles.py  user.py  users.py
src/application/dtos/: add_nutritionist_profile_dto.py  auth_dto.py  fitness_profile_dto.py  nutritionist_profile_dto.py  trainer_profile_dto.py  user_dto.py
src/application/use_cases/: adicionar_perfil_nutricionista.py  autenticar_usuario.py  cadastrar_fitness_user.py  cadastrar_nutritionist_user.py  cadastrar_trainer_user.py  cadastrar_user.py  trocar_senha.py
src/config/: settings.py  test_settings.py
src/domain/: exceptions.py
src/domain/entities/: user.py
src/domain/repositories/: user_repository.py
src/domain/value_objects/: email.py
src/infrastructure/db/: base.py  (+2 more)
tests/: conftest.py
tests/integration/: test_add_profile_api.py  test_fitness_api.py  test_nutritionist_api.py  test_sqlalchemy_user_repository.py  test_trainer_api.py
tests/unit/: test_cadastrar_fitness_user_use_case.py  test_cadastrar_usuario_use_case.py  test_fitness_profile_integration.py  test_trainer_profile_integration.py  test_trocar_senha_use_case.py
(+16 files in other folders)
